--- a/shell/style.css
+++ b/shell/style.css
@@ -2,30 +2,17 @@
     background-color: alpha(black, 0.7);
 }
 
-.maynard-system {
-    background: #6d6d6d;
-    color: #fcfcfc;
-}
-
-.maynard-system:hover {
-    background: alpha(#6d6d6d, 0.8);
-    color: white;
-}
-
-.maynard-audio {
-    background: #b4b4b4;
-    color: #fcfcfc;
-}
-
-.maynard-audio:hover {
-    background: alpha(#b4b4b4, 0.8);
-    color: white;
-}
-
 .maynard-system, .maynard-system:hover, .maynard-audio, .maynard-audio:hover {
+    color: white;
+    background: transparent;
     border: none;
     border-radius: 0;
     box-shadow: none;
+}
+
+.maynard-system:hover, .maynard-audio:hover {
+    background: black;
+    color: white;
 }
 
 .maynard-apps {
@@ -68,4 +55,14 @@ popover {
     border: 1px solid gray;
     border-radius: 0;
     padding: 10px;
+}
+
+panel-button {
+    padding: 0 6px;
+    color: white;
+    border: none;
+}
+
+panel-button:hover {
+    background: black;
 }
