--- a/lib/mnd-launcher.ui
+++ b/lib/mnd-launcher.ui
@@ -16,7 +16,7 @@
         <property name="spacing">6</property>
         <child>
           <object class="GtkSearchEntry">
-            <property name="width_request">300</property>
+            <property name="width_request">400</property>
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="halign">center</property>
@@ -24,6 +24,7 @@
             <property name="primary_icon_activatable">False</property>
             <property name="primary_icon_sensitive">False</property>
             <property name="placeholder_text" translatable="yes">Search</property>
+            <signal name="search-changed" handler="search_changed" object="MndLauncher" swapped="no"/>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -36,7 +37,6 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="hscrollbar_policy">never</property>
-            <property name="shadow_type">in</property>
             <property name="max_content_height">500</property>
             <property name="propagate_natural_width">True</property>
             <property name="propagate_natural_height">True</property>
@@ -44,6 +44,7 @@
               <object class="GtkViewport">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="shadow_type">none</property>
                 <child>
                   <object class="GtkGrid" id="grid">
                     <property name="visible">True</property>
@@ -77,6 +78,9 @@
                     <child>
                       <placeholder/>
                     </child>
+                    <style>
+                      <class name="maynard-grid"/>
+                    </style>
                   </object>
                 </child>
               </object>
