--- a/lib/style.css
+++ b/lib/style.css
@@ -2,27 +2,14 @@
     background-color: alpha(black, 0.7);
 }
 
-.maynard-apps {
-    color: #bebebe;
-    border-radius: 0;
-    border: none;
-}
-
-.maynard-apps:hover {
-    background: alpha(black, 0.2);
-    color: white;
-    border: none;
-    box-shadow: none;
-}
-
 .maynard-grid-item {
     background-color: alpha(black, 0.6);
     color: white;
-    font: 12px Sans;
+    font-size: 14px;
     border-style: solid;
-    border-color: #6d6d6d;
+    border-color: gray;
     border-width: 1px;
-    border-radius: 1px;
+    border-radius: 3px;
 }
 
 .maynard-grid-item button, .maynard-grid-item button:hover {
@@ -33,7 +20,8 @@
 }
 
 .maynard-grid-label {
-    background-color: #929292;
+    padding: 5px 0;
+    background-color: alpha(black, 0.9);
 }
 
 popover {
@@ -45,7 +33,7 @@ popover {
 }
 
 panel-button {
-    padding: 0 6px;
+    padding: 3px 6px;
     color: white;
     border: none;
 }
